Console object's @@toStringTag should be "console" instead of "Console" https://bugs.webkit.org/show_bug.cgi?id=215750

Reviewed by Ross Kirsling.

LayoutTests/imported/w3c:

Import ToT wpt/console tests including @@toStringTag tests.

* resources/import-expectations.json:
* web-platform-tests/console/META.yml: Added.
* web-platform-tests/console/console-is-a-namespace.any-expected.txt: Added.
* web-platform-tests/console/console-is-a-namespace.any.html: Added.
* web-platform-tests/console/console-is-a-namespace.any.js: Added.
(test):
* web-platform-tests/console/console-is-a-namespace.any.worker-expected.txt: Added.
* web-platform-tests/console/console-is-a-namespace.any.worker.html: Added.
* web-platform-tests/console/console-label-conversion.any-expected.txt: Added.
* web-platform-tests/console/console-label-conversion.any.html: Added.
* web-platform-tests/console/console-label-conversion.any.js: Added.
(const.method.of.methods.test):
* web-platform-tests/console/console-label-conversion.any.worker-expected.txt: Added.
* web-platform-tests/console/console-label-conversion.any.worker.html: Added.
* web-platform-tests/console/console-namespace-object-class-string.any-expected.txt: Added.
* web-platform-tests/console/console-namespace-object-class-string.any.html: Added.
* web-platform-tests/console/console-namespace-object-class-string.any.js: Added.
(test):
(test.t.t.add_cleanup):
* web-platform-tests/console/console-namespace-object-class-string.any.worker-expected.txt: Added.
* web-platform-tests/console/console-namespace-object-class-string.any.worker.html: Added.
* web-platform-tests/console/console-tests-historical.any-expected.txt: Added.
* web-platform-tests/console/console-tests-historical.any.html: Added.
* web-platform-tests/console/console-tests-historical.any.js: Added.
(test):
* web-platform-tests/console/console-tests-historical.any.worker-expected.txt: Added.
* web-platform-tests/console/console-tests-historical.any.worker.html: Added.
* web-platform-tests/console/idlharness.any-expected.txt: Added.
* web-platform-tests/console/idlharness.any.html: Added.
* web-platform-tests/console/idlharness.any.js: Added.
* web-platform-tests/console/idlharness.any.worker-expected.txt: Added.
* web-platform-tests/console/idlharness.any.worker.html: Added.
* web-platform-tests/console/w3c-import.log: Added.

Source/JavaScriptCore:

Use "console" instead of "Console". Now, namespace object has @@toStringTag.
https://github.com/web-platform-tests/wpt/pull/24717

* runtime/ConsoleObject.cpp:

LayoutTests:

* fast/dom/Window/window-lookup-precedence-expected.txt:
* fast/loader/window-properties-restored-from-page-cache-expected.txt:
* http/tests/security/cross-frame-access-put-expected.txt:
* inspector/debugger/pause-for-internal-scripts-expected.txt:
* inspector/debugger/stepping/stepping-internal-scripts-expected.txt:
* js/console-expected.txt:
* js/console.html:
* platform/gtk/fast/dom/Window/window-lookup-precedence-expected.txt:
* platform/mac-wk2/fast/dom/Window/window-lookup-precedence-expected.txt:

Canonical link: https://commits.webkit.org/228507@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266030 268f45cc-cd09-0410-ab3c-d52691b4dbfc